# Project-Explainer

./: .flake8  .gitignore  README.md  readthedocs.yml
.github/workflows/: python-app.yml
GraphRag/: README.MD  knowledgeGraph.py  main.py  tools.py
GraphRag/Example/: GraphRagExample.ipynb
docs/: gh_explainer.rst
docs/source/: conf.py  index.rst  modules.rst
experiments/experiment_bart_ft_abs_summarization/: experiment_bart_ft_abs_summarization_eval.ipynb
experiments/experiment_t5_abs_summarization/: eval_rouge_bleu.ipynb  experiment_t5_abs_summarization.ipynb  experiment_t5_abs_summarization.py
graph_rag/evaluation/: README.MD  evaluation_llama_index.py
graph_rag/evaluation/random/: results_5.csv  (+1 more)
graph_rag/evalution/: evaluation_llama_index.py
graph_rag/experiments/: EXPERIMENTS.MD
graph_rag/graph_builder/: README.MD  knowledgeGraph.py  main.py  requirements.txt  tools.py
graph_rag/graph_retrieval/: Graph_Index_Retriever.ipynb  README.MD  graph_retrieval.py
project_explainer/: __init__.py  github_parser.py  pyproject.toml  requirements.txt  summarize.py
project_explainer/examples/: examples.py
project_explainer/gh_explainer/: summarize.py
project_explainer_ui/: README.md  readthedocs.yml  requirements.txt  streamlit_ui.py  ui.py
project_explainer_ui/flagged/: log.csv
project_processor/: README.md  __init__.py  file_utils.py  github_downloader.py  pyproject.toml
project_processor/examples/: examples.py
project_processor/gh_processor/: __init__.py  downloader.py  file_utils.py  github_downloader.py
source/: conf.py  index.rst
(+26 files in other folders)
